[workspace]
members = [".", "cli", "invoice"]
default-members = [".", "invoice"]

[workspace.package]
version = "0.12.0-beta.6"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://rgb.tech"
repository = "https://github.com/RGB-WG/rgb-std"
rust-version = "1.85.0" # Due to associated types generic bound requirements
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.8.1"
strict_encoding = "2.8.2"
strict_types = "2.8.3"
commit_verify = "=0.12.0-beta.6"
single_use_seals = "=0.12.0-beta.6"
aora = ">=0.6.3"
baid64 = "0.4.1"
hypersonic = "=0.12.0-beta.6"
sonic-callreq = "=0.12.0-beta.6"
sonix = "=0.12.0-beta.6"
bp-core = "=0.12.0-beta.6"
bp-invoice = "=0.12.0-beta.6"
rgb-core = "=0.12.0-beta.6"
rgb-std = { version = "=0.12.0-beta.6", path = "." }
rgb-invoice = { version = "=0.12.0-beta.6", path = "./invoice" }
indexmap = "2.9.0"
chrono = "0.4.39"
serde = "1.0.215"
serde_with = "1.14.0"

[package]
name = "rgb-std"
description = "Standard Library for RGB smart contracts"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"

[[bin]]
name = "rgb-stl"
required-features = ["stl"]

[lib]
name = "rgb"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
strict_types.workspace = true
commit_verify.workspace = true
single_use_seals.workspace = true
aora.workspace = true
hypersonic.workspace = true
bp-core = { workspace = true, optional = true }
bp-invoice = { workspace = true, optional = true }
rgb-core.workspace = true
rgb-invoice.workspace = true
indexmap.workspace = true
chrono.workspace = true
serde = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }

[dev-dependencies]
rand = "0.8.4"

[features]
default = ["std", "bitcoin"]
all = ["std", "bitcoin", "liquid", "prime", "fs", "stl", "serde"]
std = ["rgb-invoice/std", "indexmap/std"]

bitcoin = ["bp-core", "bp-invoice", "rgb-core/bitcoin", "rgb-invoice/bitcoin"]
liquid = ["rgb-core/liquid", "rgb-invoice/liquid"]
prime = ["rgb-core/prime", "rgb-invoice/prime"]

uri = ["rgb-invoice/uri"]
fs = ["std", "hypersonic/persist-file", "aora/file-strict"]

stl = ["commit_verify/stl", "hypersonic/stl", "strict_types/armor", "bitcoin", "bp-core/stl"]

serde = [
    "std",
    "dep:serde",
    "dep:serde_with",
    "amplify/serde",
    "strict_encoding/serde",
    "strict_types/serde",
    "commit_verify/serde",
    "hypersonic/serde",
    "bp-core/serde",
    "rgb-core/serde",
    "rgb-invoice/serde",
    "chrono/serde"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
commit_verify = { git = "https://github.com/LNP-BP/client_side_validation", branch = "v0.12" }
single_use_seals = { git = "https://github.com/LNP-BP/client_side_validation", branch = "v0.12" }
sonic-callreq = { git = "https://github.com/AluVM/sonic", branch = "develop" }
sonic-api = { git = "https://github.com/AluVM/sonic", branch = "develop" }
hypersonic = { git = "https://github.com/AluVM/sonic", branch = "develop" }
sonix = { git = "https://github.com/AluVM/sonic", branch = "develop" }
rgb-core = { git = "https://github.com/RGB-WG/rgb-core", branch = "v0.12" }
