[workspace]
members = [
    ".",
    "invoice",
    "stl"
]
default-members = [
    ".",
    "invoice"
]
resolver = "2"

[workspace.package]
version = "0.11.1-alpha.2+unreviewed"
authors = ["Dr Maxim Orlovsky <orlovsky@lnp-bp.org>"]
homepage = "https://github.com/RGB-WG"
repository = "https://github.com/RGB-WG/rgb-std"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.81.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
amplify = "4.8.0"
nonasync = "0.1.0"
ascii-armor = "0.9.0"
baid64 = "0.4.1"
bp-electrum = "0.11.1-alpha.2"
bp-esplora = { version = "0.11.1-alpha.2", default-features = false }
strict_encoding = "2.8.2"
strict_types = "2.8.3"
commit_verify = { version = "0.11.1-alpha.2", features = ["stl"] }
bp-core = { version = "0.11.1-alpha.2", features = ["stl"] }
bp-invoice = { version = "0.11.1-alpha.2" }
rgb-core = { version = "0.11.1-alpha.2", features = ["stl"] }
indexmap = "2.4.0"
serde_crate = { package = "serde", version = "1", features = ["derive"] }

[package]
name = "rgb-std"
version = { workspace = true }
description = "RGB standard library for working with smart contracts on Bitcoin & Lightning"
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "README.md"

[lib]
name = "rgbstd"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[dependencies]
amplify = { workspace = true }
nonasync = { workspace = true }
ascii-armor = { workspace = true }
baid64 = { workspace = true }
bp-electrum = { workspace = true, optional = true }
bp-esplora = { workspace = true, optional = true }
strict_encoding = { workspace = true }
strict_types = { workspace = true }
commit_verify = { workspace = true }
bp-core = { workspace = true }
rgb-core = { workspace = true }
rgb-invoice = { version = "0.11.1-alpha.2", path = "invoice" }
aluvm = "0.11.1-alpha.2"
base85 = "=2.0.0"
chrono = "0.4.38"
indexmap = { workspace = true }
serde_crate = { workspace = true, optional = true }
rand = "0.9.1"

[features]
default = []
all = ["esplora_blocking", "electrum_blocking", "mempool_blocking", "fs", "serde"]
esplora_blocking = ["bp-esplora", "bp-esplora/blocking", "bp-esplora/blocking-https"]
esplora_blocking-wasm = ["bp-esplora", "bp-esplora/blocking-wasm"]
electrum_blocking = ["bp-electrum"]
mempool_blocking = ["esplora_blocking"]
serde = [
    "serde_crate",
    "chrono/serde",
    "amplify/serde",
    "strict_encoding/serde",
    "strict_types/serde",
    "commit_verify/serde",
    "bp-core/serde",
    "rgb-core/serde",
    "rgb-invoice/serde"
]
fs = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
