[package]
name = "rgbx"
description = "RGB command-line toolbox utility"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
readme = "../README.md"

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
rgb-std = { workspace = true, features = ["fs", "serde"] }
serde.workspace = true
serde_yaml = "0.9.34"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive", "env"] }
