[package]
name = "rgb-invoice"
description = "Invoice Library for RGB smart contracts"
version.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amplify.workspace = true
commit_verify.workspace = true
strict_encoding.workspace = true
baid64.workspace = true
hypersonic.workspace = true
sonic-callreq.workspace = true
bp-core = { workspace = true, optional = true }
bp-invoice = { workspace = true, optional = true, features = ["strict_encoding"] }
rgb-core.workspace = true
serde = { workspace = true, optional = true }

[features]
default = ["std", "bitcoin"]
all = ["std", "uri", "bitcoin", "liquid", "prime", "serde"]

bitcoin = ["bp-core", "rgb-core/bitcoin", "bp-invoice"]
liquid = ["bp-core", "rgb-core/liquid", "bp-invoice"]
prime = ["rgb-core/prime"]
std = ["amplify/std", "sonic-callreq/std"]
uri = ["sonic-callreq/uri"]
serde = ["dep:serde", "sonic-callreq/serde", "bp-core/serde", "rgb-core/serde", "bp-invoice/serde"]
