[package]
name = "rgb-invoice"
version = { workspace = true }
description = "Invoicing library for RGB smart contracts"
keywords = { workspace = true }
categories = { workspace = true }
readme = "../README.md"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "rgbinvoice"

[dependencies]
amplify = { workspace = true }
baid64 = { workspace = true }
fast32 = "1.0.3"
strict_encoding = { workspace = true }
strict_types = { workspace = true }
bp-core = { workspace = true }
bp-invoice = { workspace = true }
rgb-core = { workspace = true }
indexmap = { workspace = true }
fluent-uri = "0.3.2"
percent-encoding = "2.3.1"
serde_crate = { workspace = true, optional = true }
rand = "0.9.1"

[features]
default = []
serde = ["serde_crate"]
