[package]
name = "rgbx"
version = "0.10.0-alpha.1"
description = "RGB command-line tool for working with smart contracts at low level"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[dependencies]
rgb-std = { version = "0.10.0-alpha.1", path = "../std" }
clap = { version = "4.1.6", features = ["derive"] }
