[package]
name = "rgb-std"
version = "0.11.0-alpha"
description = "RGB standard library for working with smart contracts on Bitcoin & Lightning"
keywords = ["bitcoin", "lightning", "rgb", "smart-contracts", "lnp-bp"]
categories = ["cryptography::cryptocurrencies"]
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
readme = "../README.md"

[lib]
name = "rgb"
crate-type = ["cdylib", "rlib"] # We need this for WASM

[dependencies]
amplify = { workspace = true }
strict_encoding = { workspace = true }
strict_types = { workspace = true }
commit_verify = { workspace = true }
bp-core = { workspace = true }
bp-std = { workspace = true, optional = true }
descriptors = "=0.10.0-BP-beta.1"
rgb-core = { workspace = true }
baid58 = { workspace = true }
base85 = "=2.0.0"
chrono = "0.4.31"
serde_crate = { workspace = true, optional = true }
serde_with = { workspace = true, optional = true }
cfg_eval = { workspace = true, optional = true }
indexmap = "2.0.2"

[features]
default = ["descriptor"]
all = ["fs", "descriptor", "serde"]
descriptor = ["bp-std"]
serde = [
    "serde_crate",
    "serde_with",
    "cfg_eval",
    "amplify/serde",
    "strict_encoding/serde",
    "strict_types/serde",
    "commit_verify/serde",
    "bp-core/serde",
    "rgb-core/serde",
    "bp-std/serde",
]
fs = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = [ "all" ]
