[package]
name = "rgb-persist-fs"
version.workspace = true
authors.workspace = true
description = "Filesystem persistence for RGB smart contracts"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["algorithms", "cryptography", "science", "no-std"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [".github"]

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
sonic-persist-fs.workspace = true
rgb-std = { workspace = true, features = ["binfile"] }
aora.workspace = true

[features]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
